<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_marginTop="100dp"
	android:paddingLeft="10dp"
	android:paddingRight="10dp" >
	<TableRow android:background="#0079D6" android:padding="5dp">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:id="@+id/name"
			android:textColor="#FFFFFF"
			android:textAlignment="center"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:id="@+id/sec"
			android:textColor="#FFFFFF"
			android:textAlignment="center"/>
	
	</TableRow>
	<TableRow android:background="#808080" android:padding="5dp">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:textColor="#FFFFFF"
			android:text="@string/no" />
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:textColor="#FFFFFF"
			android:text="@string/subject" />
		
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:textColor="#FFFFFF"
			android:text="@string/grade" />
	</TableRow>
	<TableRow android:background="#DAE8FC" android:padding="5dp">
		
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/_1" />
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/maths" />
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:id="@+id/maths_marks"
			/>
	</TableRow>
	<TableRow android:background="#DAE8FC" android:padding="5dp">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/_2" />
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/physics" />
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:id="@+id/phy_marks"
			/>
	</TableRow>
	<TableRow android:background="#DAE8FC" android:padding="5dp">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/_3" />
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/social" />
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:id="@+id/social_marks"
			/>
	</TableRow>
	<TableRow android:background="#DAE8FC" android:padding="5dp">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/_4" />
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/english" />
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:id="@+id/english_marks"
			/>
	</TableRow>
	<TableRow android:background="#DAE8FC" android:padding="5dp">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/_5" />
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/first_language" />
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:id="@+id/fl_marks"
			/>
	</TableRow>
	<TableRow android:background="#DAE8FC" android:padding="5dp">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/_6" />
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/second_language" />
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:id="@+id/sl_marks"
			/>
	</TableRow>
	<TableRow android:background="#DAE8FC" android:padding="5dp">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="TOTAL GRADE"
			android:textAlignment="center"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:id="@+id/total"
			android:textAlignment="center"/>
	
	</TableRow>
</TableLayout>