<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
   
    <fragment
        android:id="@+id/nav_home"
        android:name="com.ringpi.project1.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.ringpi.project1.ui.gallery.GalleryFragment"
        android:label="@string/exam_corner"
        tools:layout="@layout/fragment_gallery" />

    <activity
        android:id="@+id/nav_slideshow"
        android:name="com.ringpi.project1.ContactUsActivity"
        android:label="@string/contact"
        tools:layout="@layout/activity_contact_us" />
</navigation>