<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.ringpi.project1.LoginActivity">
    
    
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/school"
        android:elevation="10dp"
        android:contentDescription="@string/applogo" />
    
    <TextView
        android:id="@+id/textView"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <com.google.android.material.textfield.TextInputLayout
        
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="filled"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:endIconMode="clear_text"
        app:boxStrokeColor="#81d4fa"
        app:boxStrokeWidth="2sp"
        android:hint="@string/email">
        
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email1"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#fff"
            android:layout_marginTop="3dp"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="3dp"
            
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
       
        app:boxBackgroundMode="filled"
        android:layout_marginTop="3dp"
        app:boxStrokeColor="#81d4fa"
        app:endIconMode="password_toggle"
        app:boxStrokeWidth="2sp"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
          
            android:background="#fff"
            android:maxLines="1"
            android:inputType="textPassword"
            android:layout_marginBottom="5dp"
           />
    </com.google.android.material.textfield.TextInputLayout>
    
    <Button
        android:id="@+id/login1"
        android:layout_width="180dp"
        android:layout_gravity="center"
        android:layout_height="45dp"
        android:elevation="30dp"
        android:background="@drawable/rounded_button"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        android:textSize="15sp"
        android:textStyle="bold" />
    
    <LinearLayout
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
    
        <TextView
            android:id="@+id/alreadyMember"
            android:text="@string/don_t_have_and_account"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    
        <TextView
            android:id="@+id/signUpText"
            android:text="@string/signUp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
