<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".AccessCodeVerificationActivity">
	
	
	<TextView
		android:id="@+id/textView2"
		android:text="@string/create_account"
		android:textStyle="bold"
		android:textSize="25sp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="110dp"
		app:layout_constraintBottom_toTopOf="@+id/textView5"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.497"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
	
	<TextView
		android:id="@+id/textView5"
		android:text="@string/please_enter_the_access_code"
		android:textSize="13sp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="10dp"
		app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView2" />
	
	<com.google.android.material.textfield.TextInputLayout
		
		android:id="@+id/textInputLayout"
		style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
		android:layout_width="275dp"
		android:layout_gravity="center"
		android:layout_height="wrap_content"
		android:layout_marginTop="50dp"
		app:boxStrokeColor="#81d4fa"
		app:boxStrokeWidth="2sp"
		android:hint="@string/access_code"
		app:layout_constraintBottom_toTopOf="@+id/accessDone"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView5">
		
		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/code"
			android:maxLines="1"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:maxLength="8"
			android:layout_gravity="center"
			android:background="#ffff"
			android:inputType="textCapCharacters"
			 />
	</com.google.android.material.textfield.TextInputLayout>
	
	<Button
		android:id="@+id/accessDone"
		android:layout_width="120sp"
		android:layout_gravity="center"
		android:layout_height="50dp"
		android:elevation="30dp"
		android:background="@drawable/rounded_button"
		android:paddingBottom="6dp"
		android:text="@string/next"
		android:textSize="15sp"
		android:textStyle="bold"
		android:layout_marginTop="10sp"
		app:layout_constraintBottom_toTopOf="@+id/alreadyMember"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.498"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
	
	<TextView
		android:id="@+id/alreadyMember"
		android:text="@string/already_a_member"
		android:textSize="12sp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="150dp"
		app:layout_constraintBottom_toTopOf="@+id/textview6"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/accessDone"
		tools:text="Already a member?" />
	
	<TextView
		android:id="@+id/textview6"
		android:text="@string/login"
		android:textSize="15sp"
		android:textStyle="bold"
		android:textAllCaps="true"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="50dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.498"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/alreadyMember"
		tools:text="@string/login" />


</androidx.constraintlayout.widget.ConstraintLayout>