<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:id="@+id/cout"
	>
	
	
	<ImageView
		android:id="@+id/imageView4"
		android:contentDescription="@string/Check_in_out_Logo"
		android:layout_width="80dp"
		android:layout_height="80dp"
		android:src="@drawable/baseline_cancel_white_48dp"
		android:background="@drawable/shape_primary"
		android:padding="10dp"
		android:layout_marginTop="40dp"
		app:layout_constraintBottom_toTopOf="@+id/textView8"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:ignore="HardcodedText" />
	
	
	<TextView
		android:id="@+id/textView8"
		android:text="@string/check_out"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="35sp"
		app:layout_constraintBottom_toTopOf="@+id/cardView"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/imageView4" />
	
	<androidx.cardview.widget.CardView
		android:id="@+id/cardView"
		android:layout_width="340dp"
		android:layout_height="250dp"
		android:elevation="8dp"
		android:layout_marginBottom="80dp"
		app:layout_constraintBottom_toTopOf="@+id/extended_fab2"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView8">
		
		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="340dp"
			android:layout_height="250dp"
			android:layout_gravity="center"
			android:elevation="25dp">
			
			
			<TextView
				android:id="@+id/textViewCheckout"
				android:layout_width="315dp"
				android:layout_height="64dp"
				android:textStyle="bold"
				android:textSize="18sp"
				android:gravity="center"
				android:layout_gravity="center"
				android:text="@string/checkout_display_text"
				android:layout_marginTop="50dp"
				app:layout_constraintBottom_toTopOf="@+id/classtext"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.36"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />
			
			<TextView
				android:id="@+id/classtext"
				android:text="@string/textview"
				android:textStyle="bold"
				android:gravity="center"
				android:textSize="18sp"
				android:layout_gravity="center"
				android:layout_width="106dp"
				android:layout_height="56dp"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintVertical_bias="0.587" />
			
			<com.github.ybq.android.spinkit.SpinKitView
				android:id="@+id/spin_kit_cout"
				style="@style/SpinKitView.FadingCircle"
				android:layout_width="117dp"
				android:layout_height="103dp"
				android:layout_gravity="center"
				app:SpinKit_Color="@color/colorAccent"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.524"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintVertical_bias="0.891" />
		
		</androidx.constraintlayout.widget.ConstraintLayout>
	</androidx.cardview.widget.CardView>
	
	<com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
		android:id="@+id/extended_fab2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:contentDescription="@string/extended_fab_content_desc"
		android:text="@string/extended_fab_label"
		android:layout_marginBottom="30dp"
		app:icon="@drawable/baseline_check_circle_outline_black_18dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.869"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/cardView" />


</androidx.constraintlayout.widget.ConstraintLayout>